fix hit test location for remote devtool

1. With use-zoom-for-dsf enabled, root_scroll_offset from metadata
is in physical pixel, it needs to be convert to dip.
2. In blink, the hit test is expecting document point, but x and y
from the devtool front end is in CSS scale. We need to apply the
PageZoomFactor before doing the hit test.

Bug: 876403
Change-Id: I6cd2f7ecd4d908a6aa986c4d1dfdab7e332355cb
Reviewed-on: https://chromium-review.googlesource.com/1183968
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587268}
Former-commit-id: 0ac34f5dc71728cb7cfde16f504526095d022778